syntax = "proto3";

package scrayosnet.passage;

service Status {
    rpc GetStatus(StatusRequest) returns (StatusResponse);
}

message StatusRequest {
    string client_address = 1;
    string server_address = 2;
    uint64 protocol = 3;
}

message StatusResponse {

}
